# Kontakt-Render-Framework

./: CMakeLists.txt  LICENSE.md  README.md
include/krfw/: krfw_types.h
include/krfw/rhi/: krfw_buffer.h  krfw_context.h  krfw_device.h  krfw_shaderstate.h  krfw_texture.h
src/: CMakeLists.txt
src/krfw/rhi/: krfw_buffer.cpp  krfw_context.cpp  krfw_device.cpp  krfw_renderstates.cpp  krfw_shaderstate.cpp  krfw_texture.cpp
